# sopcast_player

./: .gitignore  CMakeLists.txt  README.md  TODO  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  sopcast_player.pro  sp.pl  teststatus.pl
